[package]
name = "atmega"
authors = ["Kestrel"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/commonkestrel/atmega"
keywords = ["atmega", "arduino", "avr", "uno"]
categories = ["no-std", "embedded"]
license = "MIT"
exclude = ["/.vscode"]

[profile.dev]
opt-level = 2
lto = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
atmega_macros = { path = "./macros", optional = true }

[features]
default = ["millis", "serial-buffer"]

## The millis function consumes the TIMER0_OVF interrupt
millis = []

## The serial buffer consumes all incoming serial traffic as well as the USART_RX interrupt
serial-buffer = []

interrupt-macro = ["atmega_macros"]
