[package]
name = "atmega"
authors = ["Kestrel"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/commonkestrel/atmega"
description = "A fast, easy, recognizable interface for the ATmega328p"
keywords = ["atmega", "arduino", "avr", "uno", "atmega328p"]
categories = ["no-std", "no-std::no-alloc", "embedded"]
license = "MIT"
exclude = ["/.vscode"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.dev]
opt-level = 2
lto = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
atmega_macros = { path = "./macros", optional = true }

[features]
default = ["millis", "serial-buffer"]

## The millis function consumes the TIMER0_OVF interrupt
millis = []

## The serial buffer consumes all incoming serial traffic as well as the USART_RX interrupt
serial-buffer = []

## The interrupts macro requires compilation of the syn, quote, and proc_macro2 crates
interrupt-macro = ["atmega_macros"]

twowire = []

[[example]]
name = "fade"
path = "examples/fade.rs"

[[example]]
name = "serial"
path = "examples/serial.rs"

[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "interrupt"
path = "examples/interrupt.rs"
required-features = ["interrupt-macro"]
