[package]
name = "atmega"
authors = ["Kestrel"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/commonkestrel/atmega"
description = "A fast, easy, recognizable interface for the ATmega328p"
keywords = ["atmega", "arduino", "avr", "uno", "atmega328p"]
categories = ["no-std", "no-std::no-alloc", "embedded"]
license = "MIT"
exclude = ["/.vscode"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
atmega_macros = { path = "./macros" }

[features]
default = ["millis"]

## The millis function consumes the TIMER0_OVF interrupt
millis = []

## The serial buffer consumes all incoming serial traffic as well as the USART_RX interrupt
serial-buffer = []

serial-print = []

spi = []

twowire = []

[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "fade"
path = "examples/fade.rs"

[[example]]
name = "serial"
path = "examples/serial.rs"

[[example]]
name = "interrupt"
path = "examples/interrupt.rs"
required-features = ["interrupt-macro"]

[[example]]
name = "ds1307"
path = "examples/ds1307.rs"
required-features = ["twowire"]
