[package]
name = "atmega"
authors = ["Kestrel"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
atmega_macros = { path = "./macros", optional = true }

[features]
default = ["millis"]

## The millis function effectivly consumes TIMER0, setting the mode, COMPA, prescaler, and the TIMER0_COMPA interrupt
## Disable this if you require TIMER0 or the TIMER0_COMPA interrupt
millis = []

interrupt-macro = ["atmega_macros"]
